samples/_failures_safe/1761539970_6ed7bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66f9b3a8.c: In function ‘main’:
./samples/SAFE/__tmp_66f9b3a8.c:161:5: error: expected declaration or statement at end of input
  161 |     for (int i = 0; i < token_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_66f9b3a8.c:161:5: error: expected declaration or statement at end of input
